// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-text prop 1`] = `
<form action="javascript:;">
  <div class="van-search van-search--show-action" style="background: rgb(255, 255, 255);">
    <div class="van-search__content van-search__content--square">
      <div class="van-cell van-cell--borderless van-field">
        <div class="van-field__left-icon"><i class="van-icon van-icon-search">
            <!----></i></div>
        <div class="van-cell__value van-cell__value--alone">
          <div class="van-field__body"><input type="search" class="van-field__control"></div>
        </div>
      </div>
    </div>
    <div role="button" tabindex="0" class="van-search__action">Custom Text</div>
  </div>
</form>
`;

exports[`label slot 1`] = `
<form action="javascript:;">
  <div class="van-search" style="background: rgb(255, 255, 255);">
    <div class="van-search__content van-search__content--square">
      <div class="van-search__label">Custom Label</div>
      <div class="van-cell van-cell--borderless van-field">
        <div class="van-field__left-icon"><i class="van-icon van-icon-search">
            <!----></i></div>
        <div class="van-cell__value van-cell__value--alone">
          <div class="van-field__body"><input type="search" class="van-field__control"></div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`left-icon prop 1`] = `
<form action="javascript:;">
  <div class="van-search" style="background: rgb(255, 255, 255);">
    <div class="van-search__content van-search__content--square">
      <div class="van-cell van-cell--borderless van-field">
        <div class="van-field__left-icon"><i class="van-icon van-icon-setting-o">
            <!----></i></div>
        <div class="van-cell__value van-cell__value--alone">
          <div class="van-field__body"><input type="search" class="van-field__control"></div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`right-icon prop 1`] = `
<form action="javascript:;">
  <div class="van-search" style="background: rgb(255, 255, 255);">
    <div class="van-search__content van-search__content--square">
      <div class="van-cell van-cell--borderless van-field">
        <div class="van-field__left-icon"><i class="van-icon van-icon-search">
            <!----></i></div>
        <div class="van-cell__value van-cell__value--alone">
          <div class="van-field__body"><input type="search" class="van-field__control">
            <div class="van-field__right-icon"><i class="van-icon van-icon-setting-o">
                <!----></i></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`right-icon slot 1`] = `
<form action="javascript:;">
  <div class="van-search" style="background: rgb(255, 255, 255);">
    <div class="van-search__content van-search__content--square">
      <div class="van-cell van-cell--borderless van-field">
        <div class="van-field__left-icon"><i class="van-icon van-icon-search">
            <!----></i></div>
        <div class="van-cell__value van-cell__value--alone">
          <div class="van-field__body"><input type="search" class="van-field__control">
            <div class="van-field__right-icon">Custom Right Icon</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
